--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,20 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.Party">
     <activity
+      android:name=".SignUpActivity"
+      android:exported="true" />
+    <activity
       android:name=".SignInActivity"
       android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
+
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-
     <activity
       android:name=".MainActivity"
-      android:exported="true">
-    </activity>
+      android:exported="true"></activity>
   </application>
 
 </manifest>
