--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.Party">
     <activity
-      android:name=".SignUpActivity"
+      android:name=".activities.SignUpActivity"
       android:exported="true" />
     <activity
-      android:name=".SignInActivity"
+      android:name=".activities.SignInActivity"
       android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
       </intent-filter>
     </activity>
     <activity
-      android:name=".MainActivity"
+      android:name=".activities.MainActivity"
       android:exported="true"/>
   </application>
 
