--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Party"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".activities.MyInvites"
+            android:name=".activities.MyInvitesActivity"
             android:exported="true" />
         <activity
             android:name=".activities.MainActivity2"
